[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Senopiece <shichiromail@gmail.com>"]

[tool.poetry.dependencies]
python = ">3.7.0,<3.7.1 || >3.7.1,<3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-testdox = "^3.0.0"
pytest-dependency = "^0.5.1"
eth-brownie = "^1.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
